# oxidizing-lambda-functions

./: .gitignore  README.md
assets/: ten_thousand_rows_medical_records.csv
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/config/environments/: index.ts
cdk/lib/constructs/: LambdaConstruct.ts  dynamodb-table.ts  index.ts  lambda-construct.ts  node-lambda.ts  node-llrt-lambda.ts  python-lambda.ts  rust-lambda.ts  s3-bucket.ts
cdk/lib/stacks/: backend.ts
cdk/lib/types/: environment.ts  error.ts  index.ts
cdk/lib/utils/: constants.ts  error.ts  iam-policies.ts  index.ts  load-env.ts  prefix.ts
docs/: HOW_TO_DEPLOY.md  clear.md
src/assets/: medical_records_hospital_analysis.csv
src/lambda/node-20-process-file/: index.ts  package-lock.json  package.json  tsconfig.json
src/lambda/node-llrt-process-file/: index.ts  package-lock.json  package.json  prev_index.ts
src/lambda/python-pandas-process-file/: pyproject.toml
src/lambda/python-polars-process-file/: pyproject.toml
src/lambda/python-polars-process-file/python_polars_process_file/: index.py
src/lambda/python-process-file/: pyproject.toml
src/lambda/python-process-file/python_process_file/: index.py
src/lambda/rust-process-file/: Cargo.toml
src/lambda/rust-process-file/src/: main.rs
src/lambda/upload-images-deployment/: index.ts  package-lock.json  package.json
src/utils/dataset-generator/: pyproject.toml
src/utils/dataset-generator/dataset_generator/: generate_csv.py
