[tool.poetry]
name = "python-polars-process-file"
version = "0.1.0"
description = ""
authors = ["Luis Carlos Osorio Jayk <luis.osorio@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.7.1"
s3fs = "^2024.9.0"
fsspec = "^2024.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
